# soundboard-bot

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: .env  general.rs  main.rs  soundboard.rs  spotify.rs
