[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12.2", features = ["client", "gateway", "rustls_backend", "model", "collector"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
poise = "0.6.1"
dotenvy = "0.15.7"
serde_json = "1.0.138"
rspotify = "0.14.0"
regex = "1.11.1"
tokio-util = "0.7.15"

[dependencies.songbird]
version = "0.4"
features = ["builtin-queue"]

[dependencies.symphonia]
version = "0.5"
features = ["aac", "mp3", "isomp4", "alac"]
